--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5ed1a9</color>
-    <color name="colorPrimaryDark">#41B3A3</color>
-    <color name="colorAccent">#8D1F44</color>
+    <color name="colorPrimaryDark">#771A39</color>
+    <color name="colorAccent">#550C25</color>
+    <color name="colorPrimary">#8D1F44</color>
+    <color name="disabledBtnColor">#808080</color>
     <color name="semiTransparent">#14111111</color>
 </resources>
