--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -33,7 +33,8 @@
             android:layout_gravity="center_horizontal"
             android:gravity="end"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/email"
@@ -41,7 +42,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:gravity="end"
-            android:textSize="17sp"/>
+            android:textSize="17sp"
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/phone"
@@ -49,7 +51,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:gravity="end"
-            android:textSize="17sp"/>
+            android:textSize="17sp"
+            android:textColor="#000000" />
 
 
     </LinearLayout>
