--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/create_class"
-        android:title="Create Class"
+        android:title="Create Course"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_add_black_24dp"/>
 
@@ -17,7 +17,7 @@
 
     <item
         android:id="@+id/about"
-        android:title="About Us"
+        android:title="About"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_info_black_24dp"/>
 
