added account deletion

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="50dp"
-    android:background="@drawable/student_btn_bg"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:contextClickable="true">
@@ -69,7 +68,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"/>
     <TextView
-        android:text="Mike Duodu"
+        android:text="Mike Noble Duodu Annan"
         android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
