--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:background="@drawable/bg_button_rounded"
+    android:backgroundTint="#96e6dd7d"
+    android:isScrollContainer="false"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:scrollbars="none">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="50dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:contextClickable="true">
 
     <ImageView
@@ -56,6 +67,30 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/colorAccent"
+        android:visibility="visible"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"/>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        app:cardCornerRadius="75dp"
+        app:cardPreventCornerOverlap="false"
+        android:layout_gravity="center_horizontal">
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:backgroundTintMode="src_atop"
+            android:scaleType="centerCrop"
+            android:src="@drawable/img_750"/>
+    </android.support.v7.widget.CardView>
+
     <TextView
         android:text="Edue Bempa Kojo Fosu"
         android:textSize="20sp"
@@ -63,10 +98,35 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
-        android:textStyle="normal"
-        android:layout_marginTop="25dp"
+        android:textStyle="bold"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"/>
+    <TextView
+        android:text="PS/CSC/15/0036"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:textStyle="normal"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        app:cardCornerRadius="75dp"
+        app:cardPreventCornerOverlap="false"
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:backgroundTintMode="src_atop"
+            android:scaleType="centerCrop"
+            android:src="@drawable/img_duodu" />
+    </android.support.v7.widget.CardView>
+
     <TextView
         android:text="Mike Noble Duodu Annan"
         android:textSize="20sp"
@@ -74,10 +134,34 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
-        android:textStyle="normal"
-        android:layout_marginTop="25dp"
+        android:textStyle="bold"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"/>
+    <TextView
+        android:text="PS/CSC/15/0034"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:textStyle="normal"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        app:cardCornerRadius="75dp"
+        app:cardPreventCornerOverlap="false"
+        android:layout_gravity="center_horizontal">
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:backgroundTintMode="src_atop"
+            android:scaleType="centerCrop"
+            android:src="@drawable/img_750"/>
+    </android.support.v7.widget.CardView>
+
     <TextView
         android:text="Isaac Tibey"
         android:textSize="20sp"
@@ -85,8 +169,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
+    <TextView
+        android:text="PS/CSC/15/0036"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
         android:textStyle="normal"
-        android:layout_marginTop="25dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"/>
 </LinearLayout>
+</ScrollView>
