--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,6 +8,7 @@
     android:isScrollContainer="false"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
+    android:layout_marginBottom="20dp"
     android:scrollbars="none"
     tools:context=".SignIn"
     android:id="@+id/Sign_up_layout_ID">
@@ -17,13 +18,27 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CREATE ACCOUNT"
-            android:textSize="22sp"
-            android:gravity="center_horizontal"
-            android:layout_margin="20dp"/>
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_bubble_chart_black_24dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CREATE ACCOUNT"
+                android:textSize="22sp"
+                android:layout_gravity="center"
+                android:gravity="center_horizontal"
+                android:layout_margin="20dp"/>
+
+        </LinearLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/sign_up_name_text_input_layout"
