--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -159,7 +159,7 @@
             android:layout_height="150dp"
             android:backgroundTintMode="src_atop"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_750"/>
+            android:src="@drawable/img_tibey"/>
     </android.support.v7.widget.CardView>
 
     <TextView
@@ -173,7 +173,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"/>
     <TextView
-        android:text="PS/CSC/15/0036"
+        android:text="PS/CSC/15/0047"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
