--- a/app/src/main/res/layout/activity_student_materials.xml
+++ b/app/src/main/res/layout/activity_student_materials.xml
@@ -101,18 +101,48 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:orientation="vertical">-->
+<android.support.v4.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/student_material_recyclerView"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/student_material_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         </android.support.v7.widget.RecyclerView>
-        <!--</LinearLayout>-->
+
+        <ProgressBar
+            android:id="@+id/student_material_progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
+
+        <ImageView
+            android:id="@+id/student_material_no_itemIV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:src="@drawable/nodata_one"
+            android:layout_centerInParent="true" />
+
+        <TextView
+            android:id="@+id/student_material_no_itemTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No Materials!"
+            android:textSize="20sp"
+            android:visibility="gone"
+            android:layout_below="@+id/student_material_no_itemIV"
+            android:gravity="center_horizontal"/>
+        </RelativeLayout>
+</android.support.v4.widget.NestedScrollView>
     </android.support.design.widget.CoordinatorLayout>
 </android.support.design.widget.CoordinatorLayout>
